# laa_govuk_notify_orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt  run_local.sh  start.py
.circleci/: config.yml
.github/workflows/: gajira.yml
app/: __init__.py  add_email.py  celery.py  celery_app.py  config.py  email.py  endpoints.py  lifespan.py  main.py  notify.py  startup.py
app/tasks/: email.py  tasks.py
config/: __init__.py  base_config.py  celery_config.py  dev_config.py  prod_config.py  staging_config.py
docker/: run_worker.sh
docs/: DEVELOPMENT.md  DOCKER.md  RabbitMQ.md  SQS.md  TROUBLESHOOTING.md
helm_deploy/laa-govuk-notify-orchestrator/: Chart.yaml  values-development.yaml  values-production.yaml  values-staging.yaml  values.yaml
models/: email.py
models/request_models/: email.py
notify_orchestrator/: __init__.py  config.py  main.py
notify_orchestrator/tests/: test_main.py
requirements/source/: requirements-linting.in  requirements.in  requirements.txt
routers/: __init__.py  email.py  root.py  status.py
routers/docs/: email_router.py
tests/: test_deduplication.py  test_email.py  test_email_task.py  test_main.py  test_retry_time.py  test_routers.py
tests/integration_tests/: test_email_task.py
tests/test_data/: __init__.py  deduplication.py  email.py  notify.py
tests/unit_tests/: test_email.py  test_log_error_message.py  test_rate_limit.py  test_retry_time.py  test_routers.py  (+1 more)
utils/: celery.py  deduplication.py  status.py
(+8 files in other folders)
